-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 12, 13
-
Component/s: hotspot
-
b07
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8227523 | 11.0.6-oracle | Vladimir Ivanov | P3 | Resolved | Fixed | b01 |
| JDK-8227140 | 11.0.5 | Vladimir Ivanov | P3 | Resolved | Fixed | b01 |
Continuous deoptimization w/ Reason_speculate_class_check and Action_none when recompilation count is too high.
Affects EarleyBoyer benchmark (Octane/Nashorn) and manifests as bimodal distribution of scores.
Affects EarleyBoyer benchmark (Octane/Nashorn) and manifests as bimodal distribution of scores.
- backported by
-
JDK-8227140 C2: Continuous deoptimization w/ Reason_speculate_class_check and Action_none
-
- Resolved
-
-
JDK-8227523 C2: Continuous deoptimization w/ Reason_speculate_class_check and Action_none
-
- Resolved
-
- relates to
-
JDK-8068915 C2: uncommon trap w/ Reason_speculate_class_check causes performance regression due to continuous deoptimizations
-
- Closed
-