8218163: C2: Continuous deoptimization w/ Reason_speculate_class_check and Action_none

Reviewed-by: kvn, neliasso